<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context="acaia.co.firmwareupdatepearl.Ui.guide.CheckFirmwareVersion">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/guide_item_height">

                <ImageView
                    android:layout_width="@dimen/icon_next"
                    android:layout_height="@dimen/icon_next"
                    android:id="@+id/imageView5"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:src="@drawable/bt_power" />

                <TextView
                    android:textColor="@color/acaia_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Power_btn_Switch_update_mode"
                    android:textSize="@dimen/font_guide"
                    android:id="@+id/textView2"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/imageView5" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />


            <RelativeLayout

                android:layout_width="fill_parent"
                android:layout_height="@dimen/guide_item_height">

                <ImageView
                    android:layout_width="@dimen/icon_next"
                    android:layout_height="@dimen/icon_next"
                    android:id="@+id/imageViewTare"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:src="@drawable/bt_tare" />

                <TextView
                    android:textColor="@color/acaia_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/T_btn_Switch_update_mode"
                    android:textSize="@dimen/font_guide"
                    android:id="@+id/textView22"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/imageViewTare" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:textColor="@color/acaia_black"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Press_and_hold_Switch_update_mode"
                    android:textSize="@dimen/font_guide"
                    android:id="@+id/textView3" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_marginLeft="@dimen/margin_left"
                    android:textColor="@color/acaia_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LED_display_Switch_update_mode"
                    android:textSize="@dimen/font_guide"
                    android:id="@+id/tv_led"
                    android:layout_marginTop="4dp" />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:textColor="@color/acaia_black"
                    android:layout_marginLeft="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nAcaia_switch_update_mode"

                    android:textSize="@dimen/font_guide_7g"
                    android:id="@+id/tv_acaia" />

                <TextView
                    android:textColor="@color/acaia_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/and_then_switch_update_mode"
                    android:textSize="@dimen/font_guide"
                    android:id="@+id/tv_" />

                <TextView
                    android:textColor="@color/acaia_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SEt_switch_update_mode"
                    android:textSize="@dimen/font_guide_7g"
                    android:id="@+id/tv_set" />

                <TextView
                    android:textColor="@color/acaia_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comma_switch_update_mode"
                    android:textSize="@dimen/font_guide"
                    android:id="@+id/tv_com" />

            </LinearLayout>

            <TextView
                android:textColor="@color/acaia_black"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/press_and_hold_switch_update_mode"
                android:textSize="@dimen/font_guide"
                android:id="@+id/textView4" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:textColor="@color/acaia_black"
                    android:layout_marginLeft="@dimen/margin_left"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LED_display_switch_update_mode_2"
                    android:textSize="@dimen/font_guide"
                    android:id="@+id/tv_f0000_bef" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/F.0000"
                    android:textSize="@dimen/font_guide_7g"
                    android:id="@+id/tv_f0000" />

            </LinearLayout>

            <TextView
                android:textColor="@color/acaia_black"
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_both_keys"
                android:textSize="@dimen/font_guide"
                android:id="@+id/textView42" />


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <RelativeLayout

                android:layout_width="fill_parent"
                android:layout_height="@dimen/guide_item_height">


                <TextView
                    android:layout_marginLeft="@dimen/margin_left"
                    android:textColor="@color/acaia_black"
                    android:textSize="@dimen/font_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Input_the_password"
                    android:id="@+id/textView5"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    />

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <RelativeLayout

                android:layout_width="fill_parent"
                android:layout_height="@dimen/guide_item_height">


                <TextView
                    android:layout_marginLeft="@dimen/margin_left"
                    android:textColor="@color/acaia_black"
                    android:textSize="@dimen/font_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_click_T"
                    android:id="@+id/textView56"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    />

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/guide_item_height">


                <TextView
                    android:layout_marginLeft="@dimen/margin_left"
                    android:textColor="@color/acaia_black"
                    android:textSize="@dimen/font_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/move_to_next_digit"
                    android:id="@+id/textView57"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    />

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/guide_item_height">


                <TextView
                    android:layout_marginLeft="@dimen/margin_left"
                    android:textColor="@color/acaia_black"
                    android:textSize="@dimen/font_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Input_password"
                    android:id="@+id/textView51"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/tv_0415" />

                <TextView
                    android:textColor="@color/acaia_black"
                    android:layout_marginRight="@dimen/margin_right"
                    android:textSize="@dimen/font_guide_7g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Switch_update_mode_0415"
                    android:id="@+id/tv_0415"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />



            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/guide_item_height">


                <TextView
                    android:layout_marginLeft="@dimen/margin_left"
                    android:textColor="@color/acaia_black"
                    android:textSize="@dimen/font_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_correct"
                    android:id="@+id/tv_passwordok"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />


            </RelativeLayout>

            <LinearLayout
                android:layout_marginLeft="30dp"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


                <TextView
                    android:textColor="@color/acaia_black"
                    android:textSize="@dimen/font_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/will_display_switch_update_mode"
                    android:id="@+id/textViews6" />


                <TextView
                    android:textColor="@color/acaia_black"
                    android:textSize="@dimen/font_guide_7g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ISP_switch_update_mode"
                    android:id="@+id/tv_isp" />

                <TextView
                    android:textColor="@color/acaia_black"
                    android:textSize="@dimen/font_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_switch_update_mode"
                    android:id="@+id/textView7" />

                <TextView
                    android:textColor="@color/acaia_black"
                    android:textSize="@dimen/font_guide_7g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UPDAtE"
                    android:id="@+id/tv_update" />
            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

        </LinearLayout>


    </ScrollView>
</RelativeLayout>
