<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/main_bg"
    android:layout_height="match_parent"
    tools:context="acaia.co.firmwareupdatepearl.Ui.guide.GuideActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true">


        <RelativeLayout
            android:id="@+id/layout_firmwareversion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/guide_item_height" >


            <TextView
                android:textColor="@color/acaia_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Click_select_scale"
                android:id="@+id/tv_1"
                android:layout_centerVertical="true"
                android:textSize="20dp"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="10dp" />
        </RelativeLayout>





        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="@dimen/guide_item_height" >


            <TextView
                android:textColor="@color/acaia_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firmware_update_begin"
                android:id="@+id/tv_12"
                android:layout_centerVertical="true"
                android:textSize="20dp"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="10dp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />



        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="@dimen/guide_item_height" >


            <TextView
                android:textColor="@color/acaia_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upgrade_is_done"
                android:id="@+id/tv_121"
                android:layout_centerVertical="true"
                android:textSize="20dp"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="10dp" />
        </RelativeLayout>




        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />


    </LinearLayout>

</RelativeLayout>
